feat: adding calculate total value items in order
